# radscan-lite

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  FOR_LLM_PAPER_ASSISTANT.md  LICENSE  PAPER.md  PROJECT_STATE.md  README.md  SECURITY.md  STATUS.md  UPLOAD_TO_GITHUB.cmd  app.py  install.bat  install.sh  pyproject.toml  run_radscan.py
.github/workflows/: ci.yml  desktop-release.yml
demo_assets/reports/: demo_results.json  radscan_report.csv  radscan_report.json  report.csv  report.json
docs/: DEMO_MEDIA.md  DESKTOP_RELEASES.md  EXTERNAL_DATA_EVALUATION.md  index.html
packaging/: build_linux.sh  build_macos.sh  build_windows.bat
radscan_lite/: archive_security.py  dicom_reader.py  file_checks.py  models.py  privacy_checks.py  profiles.py  reporting.py  scanner.py  series_checks.py  thumbnails.py
scripts/: capture_demo.py  generate_demo_media.py  generate_synthetic_data.py  take_screenshots.py
tests/: conftest.py  test_scanner.py
