[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "radscan-lite"
version = "0.1.0"
description = "Local, read-only DICOM dataset preflight scanner for radiology researchers"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "pydicom>=2.4",
    "streamlit>=1.28",
    "numpy>=1.24",
    "pandas>=2.0",
    "Pillow>=10.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.1",
    "mypy>=1.7",
]
pylibjpeg = ["pylibjpeg>=1.4", "pylibjpeg-libjpeg>=2.0"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
