[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "radscan-lite"
version = "0.1.0"
description = "Local, read-only DICOM dataset preflight scanner for radiology researchers"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Abinav Katuru" }]
dependencies = [
    "pydicom>=2.4",
    "streamlit>=1.28",
    "numpy>=1.24",
    "pandas>=2.0",
    "Pillow>=10.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.7",
]
pylibjpeg = ["pylibjpeg>=1.4", "pylibjpeg-libjpeg>=2.0"]
packaging = ["pyinstaller>=6.0"]
desktop = ["pywebview>=4.0"]

[project.scripts]
radscan-lite = "run_radscan:main"

[project.urls]
Homepage = "https://github.com/AKaturu/radscan-lite"
Documentation = "https://github.com/AKaturu/radscan-lite#readme"
Issues = "https://github.com/AKaturu/radscan-lite/issues"

[tool.setuptools]
py-modules = ["app", "run_radscan"]

[tool.setuptools.packages.find]
include = ["radscan_lite*"]
exclude = ["demo_assets*", "docs*", "packaging*", "scripts*", "tests*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"scripts/**" = ["E402", "E501"]
"tests/**" = ["E402", "E501"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
